--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        image: "projectus"
+        image: "project"
+        user: "1000:1000"
         ports:
             - "8080:80"
         volumes:
